# self-improving-maintainer-bot

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  docs_feedback.yml  eval_failure.yml  feature_request.yml
.github/workflows/: ci.yml  docs-bot-eval.yml  docs-patch-candidate.yml  (+7 more)
docs/: ADDITIONAL_AUTOMATION.md  AUTO_IMPROVE_SCHEDULING.md  CODEX_LOCAL.md  CODEX_REDTEAM_GATE.md  COMMANDS.md  GITHUB_SETUP.md  IDENTITY_SEPARATION.md  LOCAL_CODEX_ONLY_SETUP.md  LOOP_EXPERIMENTS.md  NEXT_STEPS.md  OPERATIONS_RUNBOOK.md  PROJECT_STATUS.md  RISK_MODEL.md  SELF_IMPROVING_PROJECT_GUIDE.md  START_HERE.md  TARGET_PROFILES.md  TARGET_REPOSITORY_PROTECTION.md  knowledge.md
evals/: docs_qa.jsonl
policies/: codex_local_policy.md  self_improvement_policy.md
profiles/: today-shagal-explosion-major.json  today-shagal-explosion-small.json
prompts/: docs_qa_system.md  improvement_planner.md
scripts/: apply-target-protection.ps1  auto-improve-target-once.ps1  capture-target-visuals.ps1  codex-local-loop.ps1  codex-local-loop.sh  profile-change-scale.ps1  register-target-auto-improve-schedule.ps1  run-target-auto-improve-loops.ps1  smoke.ps1  smoke.sh  test-change-scale.ps1
templates/: redteam-close-comment.md  redteam-pass-handling-comment.md  redteam-response-handling-comment.md  redteam-review-comment.md  review-response-comment.md  review-response-commit-message.md  target-auto-commit-message.md  target-auto-pr-body.md
tests/: profile-change-scale.test.ps1
(+38 files in other folders)
