[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "self-improving-maintainer-bot"
version = "0.1.0"
description = "A safe starter template for an eval-driven self-improving maintainer/docs bot."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0.0",
]

[project.scripts]
maintainer-bot = "self_maintainer_bot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
